tests/ui/transmutability/issue-101739-1.stderr
error[E0425]: cannot find type `Dst` in this scope
  --> $DIR/issue-101739-1.rs:8:9
   |
LL |         Dst: TransmuteFrom<Src, ASSUME_ALIGNMENT>,
   |         ^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
